crates/ink/tests/ui/contract/fail/event-struct.rs
#[ink::event_definition]
pub struct Event {}

fn main() {}
